Mobile nav done

--- a/index.html
+++ b/index.html
@@ -23,10 +23,8 @@
                 <a class="navbar__logo" href="#">
                     <img class="navbar__logo-img" src="img/logo.svg" alt="Logo">
                 </a>
-                <button class="navbar__toggler" type="button" id="togglerBtn">
-                    <svg width="32" height="18" xmlns="http://www.w3.org/2000/svg"><g fill="#FFF" fill-rule="evenodd"><path d="M0 0h32v2H0zM0 8h32v2H0zM0 16h32v2H0z"/></g></svg>
-                </button>
-                <div class="nav__container">
+                <button class="navbar__toggler" type="button" id="togglerBtn"></button>
+                <div class="nav__container" id="navContainer">
                     <ul class="nav" id="nav">
                         <li class="nav__item">
                             <a class="nav__link" href="#">Product <span class="nav__link-arrow"></span></a>
